--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <title>Home</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='nicepage.css')}}" media="screen">
-<link rel="stylesheet" href="{{ url_for('static', filename='home.css')}}" media="screen">
+<link rel="stylesheet" href="{{ url_for('static', filename='Home.css')}}" media="screen">
     <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='jquery.js')}}" defer=""></script>
     <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='nicepage.js')}}" defer=""></script>
     <meta name="generator" content="Nicepage 4.13.4, nicepage.com">
